--- a/mongodbexample/src/main/resources/application.properties
+++ b/mongodbexample/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://prasanna:1234@cluster0.f48lddm.mongodb.net/prasanna
-spring.data.mongodb.database=prasanna
+spring.data.mongodb.uri=your-mongo-url
+spring.data.mongodb.database=yout-database-name
